--- a/MtdrSpring/backend/playwright-report/data/c1d45a265819ab6236c8ae01265edd88478569dc.md
+++ b/MtdrSpring/backend/playwright-report/data/c1d45a265819ab6236c8ae01265edd88478569dc.md
@@ -28,18 +28,97 @@
 - button "Create Task":
   - link "Create Task":
     - /url: /create
-- text: "Time Spent 316h Deadline 6M : 0W : 0D Estado:"
-- combobox:
-  - option "Todos" [selected]
-  - option "Completada"
-  - option "Pendiente"
-- text: "Prioridad:"
-- combobox:
-  - option "Todos" [selected]
-  - option "High"
-  - option "Medium"
-  - option "Low"
+- button "Filters":
+  - img
+  - text: Filters
+- text: Time Spent 325h Deadline Sin fecha
 - list:
+  - listitem:
+    - img
+    - text: "Tarea de crear tarea 1749806303721 #509 |opened 1 days ago -- Assigned to: Loading... High Pendiente"
+    - button "Completar":
+      - img
+    - link "Editar":
+      - /url: /tasks/509/edit
+      - img
+    - button "Eliminar":
+      - img
+  - listitem:
+    - img
+    - text: "Sprint 5 (OCI) (Oswaldo) #383 |opened 12 days ago -- Assigned to: Loading... High Pendiente"
+    - button "Completar":
+      - img
+    - link "Editar":
+      - /url: /tasks/383/edit
+      - img
+    - button "Eliminar":
+      - img
+  - listitem:
+    - img
+    - text: "Sprint 5 (OCI) (Oswaldo) #384 |opened 12 days ago -- Assigned to: Loading... High Pendiente"
+    - button "Completar":
+      - img
+    - link "Editar":
+      - /url: /tasks/384/edit
+      - img
+    - button "Eliminar":
+      - img
+  - listitem:
+    - img
+    - text: "Sprint 3 (Advanced Databases) (Miguel) #135 |opened 28 days ago -- Assigned to: Loading... Low Completada"
+    - link "Editar":
+      - /url: /tasks/135/edit
+      - img
+    - button "Eliminar":
+      - img
+  - listitem:
+    - img
+    - text: "Sprint 5 (OCI) (Oswaldo) #386 |opened 12 days ago -- Assigned to: Loading... High Pendiente"
+    - button "Completar":
+      - img
+    - link "Editar":
+      - /url: /tasks/386/edit
+      - img
+    - button "Eliminar":
+      - img
+  - listitem:
+    - img
+    - text: "Sprint 5 (OCI) (Oswaldo) #385 |opened 12 days ago -- Assigned to: Loading... High Pendiente"
+    - button "Completar":
+      - img
+    - link "Editar":
+      - /url: /tasks/385/edit
+      - img
+    - button "Eliminar":
+      - img
+  - listitem:
+    - img
+    - text: "Requirements (Luis) #72 |opened 49 days ago -- Assigned to: Loading... Low Completada"
+    - link "Editar":
+      - /url: /tasks/72/edit
+      - img
+    - button "Eliminar":
+      - img
+  - listitem:
+    - img
+    - text: "Sprint 5 (OCI) (Oswaldo) #387 |opened 12 days ago -- Assigned to: Loading... High Pendiente"
+    - button "Completar":
+      - img
+    - link "Editar":
+      - /url: /tasks/387/edit
+      - img
+    - button "Eliminar":
+      - img
+  - listitem:
+    - img
+    - text: "Tarea de crear tarea 1749806306688 #510 |opened 1 days ago -- Assigned to: Loading... High Pendiente"
+    - button "Completar":
+      - img
+    - link "Editar":
+      - /url: /tasks/510/edit
+      - img
+    - button "Eliminar":
+      - img
   - listitem:
     - img
     - text: "Sprint 4-individual (Process & Vision) Ana Raquel #188 |opened 14 days ago -- Assigned to: Loading... Low Completada"
@@ -204,29 +283,9 @@
       - img
   - listitem:
     - img
-    - text: "Sprint 5 (Design & Arch.) (Francisco) #380 |opened 8 days ago -- Assigned to: Loading... Medium Pendiente"
-    - button "Completar":
-      - img
-    - link "Editar":
-      - /url: /tasks/380/edit
-      - img
-    - button "Eliminar":
-      - img
-  - listitem:
-    - img
     - text: "Sprint 5 (Challenge) (Ana) #357 |opened 6 days ago -- Assigned to: Loading... Low Completada"
     - link "Editar":
       - /url: /tasks/357/edit
-      - img
-    - button "Eliminar":
-      - img
-  - listitem:
-    - img
-    - text: "Sprint 5 (OCI) (Oswaldo) #382 |opened 12 days ago -- Assigned to: Loading... High Pendiente"
-    - button "Completar":
-      - img
-    - link "Editar":
-      - /url: /tasks/382/edit
       - img
     - button "Eliminar":
       - img
@@ -338,77 +397,21 @@
       - img
   - listitem:
     - img
-    - text: "Sprint 5 (OCI) (Oswaldo) #383 |opened 12 days ago -- Assigned to: Loading... High Pendiente"
+    - text: "Tarea de crear tarea 1749806304503 #507 |opened 1 days ago -- Assigned to: Loading... High Pendiente"
     - button "Completar":
       - img
     - link "Editar":
-      - /url: /tasks/383/edit
+      - /url: /tasks/507/edit
       - img
     - button "Eliminar":
       - img
   - listitem:
     - img
-    - text: "Sprint 5 (OCI) (Oswaldo) #384 |opened 12 days ago -- Assigned to: Loading... High Pendiente"
+    - text: "Tarea de crear tarea 1749806303720 #508 |opened 1 days ago -- Assigned to: Loading... High Pendiente"
     - button "Completar":
       - img
     - link "Editar":
-      - /url: /tasks/384/edit
-      - img
-    - button "Eliminar":
-      - img
-  - listitem:
-    - img
-    - text: "Sprint 3 (Advanced Databases) (Miguel) #135 |opened 28 days ago -- Assigned to: Loading... Low Completada"
-    - link "Editar":
-      - /url: /tasks/135/edit
-      - img
-    - button "Eliminar":
-      - img
-  - listitem:
-    - img
-    - text: "Sprint 5 (OCI) (Oswaldo) #386 |opened 12 days ago -- Assigned to: Loading... High Pendiente"
-    - button "Completar":
-      - img
-    - link "Editar":
-      - /url: /tasks/386/edit
-      - img
-    - button "Eliminar":
-      - img
-  - listitem:
-    - img
-    - text: "Sprint 5 (OCI) (Oswaldo) #385 |opened 12 days ago -- Assigned to: Loading... High Pendiente"
-    - button "Completar":
-      - img
-    - link "Editar":
-      - /url: /tasks/385/edit
-      - img
-    - button "Eliminar":
-      - img
-  - listitem:
-    - img
-    - text: "Requirements (Luis) #72 |opened 49 days ago -- Assigned to: Loading... Low Completada"
-    - link "Editar":
-      - /url: /tasks/72/edit
-      - img
-    - button "Eliminar":
-      - img
-  - listitem:
-    - img
-    - text: "Sprint 5 (OCI) (Oswaldo) #387 |opened 12 days ago -- Assigned to: Loading... High Pendiente"
-    - button "Completar":
-      - img
-    - link "Editar":
-      - /url: /tasks/387/edit
-      - img
-    - button "Eliminar":
-      - img
-  - listitem:
-    - img
-    - text: "Tarea de actualizar tarea #389 |opened -1 days ago -- Assigned to: Loading... Medium Pendiente"
-    - button "Completar":
-      - img
-    - link "Editar":
-      - /url: /tasks/389/edit
+      - /url: /tasks/508/edit
       - img
     - button "Eliminar":
       - img
